<resources>
    <string name="app_title">DroidPlanner</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="storage_folder">Storage Folder</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="menu_drone_setup">Drone Setup</string>
    <string name="editor">Editor</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="menu_open_file">Open file</string>
    <string name="menu_save_file">Save file</string>
    <string name="menu_load_from_apm">Load from APM</string>
    <string name="menu_send_to_apm">Send to APM</string>
    <string name="menu_follow_me">Follow</string>
    <string name="menu_record_me">Record</string>
    <string name="menu_clear">Clear WPs</string>
    <string name="menu_zoom">Zoom</string>
    <string name="file_saved">File Saved</string>
    <string name="no_waypoint_files">No Waypoint Files</string>
    <string name="no_files">No Files</string>
    <string name="select_file_to_open">Select file to open:</string>
    <string name="error_when_saving">Error when saving</string>
    <string name="error_when_opening_file">Error when opening file</string>
    <string name="waypoint_altitude">Altitude</string>
    <string name="default_alt">Change Alt.</string>
    <string name="menu_open_kmz">Open KMZ</string>
    <string name="menu_add_polygon">Add Polygon</string>
    <string name="menu_polygon">Polygon</string>
    <string name="clear_polygon">Clear Poly</string>
    <string name="menu_generate_polygon">Generate</string>
    <string name="menu_survey">Survey</string>
    <string name="menu_finish_polygon">Exit</string>
    <string name="menu_clear_path">Clear Path</string>
    <string name="generate">Generate</string>
    <string name="exit">Exit</string>
    <string name="menu_clearFlightPath">Clear Track</string>
    <string name="mission_mode">Mission</string>
    <string name="polygon_mode">Polygon</string>
    <string name="dialog_polygon_hatch_angle">Hatch angle:</string>
    <string name="distance_between_lines">Distance Between Lines</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="write">Write</string>
    <string name="refresh">Refresh</string>
    <string name="this_is_very_experimental_please_be_careful">This is very experimental, please be careful.</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_calibration">Calibration</string>
    <string name="rc_control">RC control</string>
    <string name="footprint">Footprint</string>
    <string name="ground_resolution">Ground Resolution</string>
    <string name="distance_between_pictures">Distance Between Pictures</string>
    <string name="area">Area</string>
    <string name="camera_">Camera:</string>
    <string name="inner_wps">Inner WPs</string>
    <string name="hatch_angle">Hatch angle:</string>
    <string name="flight_altitude">Flight Altitude:</string>
    <string name="overlap">Overlap:</string>
    <string name="sidelap">Sidelap:</string>
    <string name="screen_planning">Planning</string>
    <string name="screen_flight_data">Flight Data</string>
    <string name="screen_camera">Camera</string>
    <string name="screen_gcp">GCP</string>
    <string name="screen_chart">Chart</string>
    <string name="length">Distance</string>
    <string name="mission_length">Mission Length</string>
    <string name="pictures">Pictures</string>
    <string name="number_of_strips">Number Of Strips</string>
    <string name="loiter_time">Loiter Time</string>
    <string name="loiter_turn">Loiter Turn</string>
    <string name="waypoint_delay">Delay before next waypoint</string>
    <string name="loiter_radius">Loiter Radius</string>
    <string name="loiter_ccw">CCW</string>
    <string name="menu_arm">Arm</string>
    <string name="menu_disarm">Disarm</string>
    <string name="rtl_Land">Land on reaching RTL position</string>
    <string name="takeoff_pitch">Min. Pitch Angle</string>
    <string name="waypointInfo_Land">Land vehicle at the current location. You must manually exit Auto mode to disarm motors.</string>
    <string name="waypointInfo_Generic">Generic Waypoint</string>
    <string name="waypointInfo_Loiter">not used.</string>
    <string name="waypointInfo_LoiterN">Orbit the current location for the desired number of turns.</string>
    <string name="waypointInfo_LoiterT">Hold the current location for the desired number of seconds or indefinitely to end the mission.</string>
    <string name="waypointInfo_RTL">Send the vehicle to the home location set when armed. An altitude of 0 will return to home at the RTL altitude parameter.</string>
    <string name="waypointInfo_TakeOff">Lift off from the ground to the specified altitude before proceeding to the next waypoint.</string>
    <string name="waypointInfo_Waypoint">Travel to a position in 3D space. Optional delay (in seconds) to hold position.</string>
    <string name="waypointInfo_CondAlt">Ascend/descend at specified rate. Delay mission state machine until desired altitude reached.</string>
    <string name="waypointInfo_CondYaw">Set condition to reach a certain target angle.</string>
    <string name="waypointInfo_CondDistance">Delay mission state machine until within desired distance of next NAV point</string>
    <string name="waypointInfo_SetHome">Changes the home location either to the current location or a specified location.</string>
    <string name="waypointInfo_SetSpeed">Change speed and/or throttle set points.Set -1 for both Speed and Throttle if no changes is required</string>
    <string name="waypointInfo_SetRelay">Set a relay to a condition.</string>
    <string name="waypointInfo_SetRepeatRelay">Cycle a relay on and off for a desired number of cyles with a desired period.</string>
    <string name="waypointInfo_ROI">Sets a location and altitude to point copter towards and to aim an optional camera.</string>
    <string name="waypointInfo_SetJump">Repeat waypoint</string>
    <string name="waypointDesc_Waypoint_1" formatted="false">Executing next waypoint immediately, heading is set to %03.0f°</string>
    <string name="waypointDesc_Waypoint_2" formatted="false">Executing next waypoint after %1.1fs, heading is set to %03.0f°</string>
    <string name="waypointDesc_Loiter" formatted="false">Loiter until next command within %1.1fm radius %s, heading is set to %03.0f°</string>
    <string name="waypointDesc_LoiterN" formatted="false">Loiter for %1.0f turns within %1.1fm radius %s, heading is set to %03.0f°</string>
    <string name="waypointDesc_LoiterT" formatted="false">Loiter for %1.0fs within %1.1fm radius %s, heading is set to %03.0f°</string>
    <string name="waypointDesc_Takeoff" formatted="false">Takeoff with pitch set to %1.2f°</string>
    <string name="waypointDesc_SetJump" formatted="false">Jump to Waypoint %d - %s</string>
    <string name="waypointDesc_SetHome" formatted="false">Home is set to</string>
    <string name="waypointDesc_SetSpeed" formatted="false">Speed is set to %1.1fm/s with throttle at %1.0f%% using %s as reference</string>
    <string name="waypointDesc_SetRelay" formatted="false">Relay is set to</string>
    <string name="waypointDesc_SetRepeat" formatted="false">Repeating relay</string>
    <string name="waypointDesc_CondAlt" formatted="false">Altitude condition is set to %1.1fm at the rate of %1.1fm/s</string>
    <string name="waypointDesc_CondDist" formatted="false">Distance condition is set to %1.1fm</string>
    <string name="waypointDesc_CondYaw" formatted="false">Yaw condition is set to %03.0f° at the rate of %1.1f°/s %s, using %s</string>
    <string name="waypointDesc_GPS" formatted="false">Lat/Lon [%1.12f/%1.12f]</string>
    <string name="waypointDesc_coordmav">current vehicle position</string>
    <string name="waypointDesc_coordwp">current Waypoint position</string>
    <string name="waypointDesc_coordgcs">current GCS position</string>
    <string name="waypointDesc_coordmanual">entered coordinate</string>
    <string name="waypointDesc_immediate">immediately</string>
    <string name="waypointDesc_s">s</string>
    <string name="waypointDesc_m">m</string>
    <string name="waypointDesc_after">after</string>
    <string name="waypointDesc_turns">turns</string>
    <string name="waypointDesc_radius">radius</string>
    <string name="waypointDesc_degrees">°</string>
    <string name="waypointDesc_CW">CW</string>
    <string name="waypointDesc_CCW">CCW</string>
    <string name="waypoint_angle">Yaw Angle</string>
    <string name="waypoint_finalaltitude">Target Altitude</string>
    <string name="waypoint_altrate">Descent / Ascend rate</string>
    <string name="waypoint_yawrate">Yaw rate</string>
    <string name="waypoint_yawdir">Set yaw direction to CCW</string>
    <string name="waypoint_yawrelative">Realtive Offset</string>
    <string name="waypoint_yawabsolute">Absolute Angle</string>
    <string name="waypoint_yawoffset">Use relative offset</string>
    <string name="waypoint_distance">Distance</string>
    <string name="waypoint_homecurrent">"Set Home using current position "</string>
    <string name="waypoint_longitude">Longitude :</string>
    <string name="waypoint_latitude">Latitude :</string>
    <string name="waypoint_speed">Target Speed</string>
    <string name="waypoint_throttle">Throttle</string>
    <string name="waypoint_speedtype">Speed type</string>
    <string name="waypoint_airspeed">Air speed</string>
    <string name="waypoint_groundspeed">Ground speed</string>
    <string name="selectCoodSource">Select location source</string>
    <string name="waypoint_coordsrc">Source data :</string>
    <string name="waypoint_jumpto">Jump to waypoint :</string>
    <string name="waypoint_repeat">Repeat waypoint</string>
    <string name="next">next</string>
    <string name="menu_map_type">Map Type</string>
    <string name="menu_map_type_satellite">Satellite</string>
    <string name="menu_map_type_hybrid">Hybrid</string>
    <string name="menu_map_type_normal">Normal</string>
    <string name="menu_map_type_terrain">Terrain</string>
    <string name="waypoint_AcceptRadius">Acceptance radius</string>
    <string name="waypoint_orbitalRadius">Orbital radius</string>
    <string name="none">None</string>
    <string name="metadata_values">Values:</string>
    <string name="metadata_units">Units:</string>
    <string name="metadata_range">Range:</string>
    <string name="menu_preflight_checklist">Pre-Flight Checklist</string>
    <string name="lst_note_hint">To add more rows, just press Enter</string>
    <string name="parameter_row_edit">Edit</string>
    <string name="Orbits">Orbits</string>
    <string name="mode_acro">Acro allows a pilot to control rate of rotation directly.</string>
    <string name="mode_althold">Alt Hold automatically controls throttle and maintains alitude. Does not require GPS.</string>
    <string name="mode_auto">Auto follows the scripted mission stored on the vehicle.</string>
    <string name="mode_circle">Circle rotates the vehicle around a point of interest. The vehicle will always point toward the center. Requires GPS lock.</string>
    <string name="mode_drift">Drift combines roll and yaw to produce a more natural and intuitive flight. Requires GPS lock.</string>
    <string name="mode_guided">Guided enables position control from a ground station. Requires GPS lock.</string>
    <string name="mode_land">Land at the current location. Requires GPS lock.</string>
    <string name="send_mission">Send mission</string>
    <string name="load_mission">Load mission</string>
</resources>