<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group
        android:id="@+id/menu_group_connected"
        android:enabled="false"
        android:visible="false">
        <item
            android:id="@+id/menu_info_bar"
            android:title="@string/menu_info_bar"
            android:showAsAction="always"
            android:actionProviderClass="org.droidplanner.activitys.helpers.InfoBarActionProvider"
            />

        <item
            android:id="@+id/menu_send_mission"
            android:showAsAction="never"
            android:title="@string/send_mission"/>
        <item
            android:id="@+id/menu_load_mission"
            android:showAsAction="never"
            android:title="@string/load_mission"/>
    </group>

    <item
        android:id="@+id/menu_connect"
        android:showAsAction="never"
        android:title="@string/menu_disconnect"/>

    <item
        android:id="@+id/menu_drone_setup"
        android:showAsAction="never"
        android:title="@string/menu_drone_setup"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_help"
        android:showAsAction="never"
        android:title="@string/help"/>
</menu>
