<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_generate_polygon"
        android:showAsAction="ifRoom"
        android:title="@string/menu_generate_polygon"/>
    <item
        android:id="@+id/menu_clear_wp"
        android:showAsAction="ifRoom"
        android:title="@string/menu_clear"/>
    <item
        android:id="@+id/menu_clear_polygon"
        android:showAsAction="ifRoom"
        android:title="@string/menu_clear_polygon"/>
    <item
        android:id="@+id/menu_zoom"
        android:showAsAction="ifRoom"
        android:title="@string/menu_zoom"/>
    <item
        android:id="@+id/menu_finish_polygon"
        android:showAsAction="ifRoom"
        android:title="@string/menu_finish_polygon"/>

</menu>