<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_load_parameters"
        android:showAsAction="ifRoom"
        android:title="@string/refresh" />
    <item
        android:id="@+id/menu_write_parameters"
        android:showAsAction="ifRoom"
        android:title="@string/write"/>
    <item
        android:id="@+id/menu_save_parameters"
        android:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/menu_connect"
        android:showAsAction="ifRoom"
        android:title="@string/menu_connect"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
</menu>