<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.droidplanner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/camera_"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.droidplanner.widgets.spinners.SpinnerSelfSelect
            android:id="@+id/cameraFileSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:entries="@array/ExampleCameraArray" />

        <CheckBox
            android:id="@+id/checkBoxInnerWPs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/inner_wps" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <GridLayout
                android:id="@+id/myGrid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="2" >

                <TextView
                    android:id="@+id/footprintTextView"
                    android:layout_gravity="left"
                    android:text="@string/footprint" />

                <TextView
                    android:id="@+id/groundResolutionTextView"
                    android:layout_gravity="left"
                    android:text="@string/ground_resolution" />

                <TextView
                    android:id="@+id/distanceTextView"
                    android:layout_gravity="left"
                    android:text="@string/distance_between_pictures" />

                <TextView
                    android:id="@+id/distanceBetweenLinesTextView"
                    android:layout_gravity="left"
                    android:text="@string/distance_between_lines" />

                <TextView
                    android:id="@+id/areaTextView"
                    android:layout_gravity="left"
                    android:text="@string/area" />

                <TextView
                    android:id="@+id/lengthTextView"
                    android:layout_gravity="left"
                    android:text="@string/mission_length" />

                <TextView
                    android:id="@+id/numberOfPicturesTextView"
                    android:layout_gravity="left"
                    android:text="@string/pictures" />

                <TextView
                    android:id="@+id/numberOfStripsTextView"
                    android:layout_gravity="left"
                    android:text="@string/number_of_strips" />
            </GridLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="@android:color/darker_gray" />

            <com.droidplanner.widgets.SeekBarWithText.SeekBarWithText
                android:id="@+id/angleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                custom:inc="1"
                custom:max="180"
                custom:min="0"
                custom:title="@string/hatch_angle"
                custom:unit="º" >
            </com.droidplanner.widgets.SeekBarWithText.SeekBarWithText>

            <com.droidplanner.widgets.SeekBarWithText.SeekBarWithText
                android:id="@+id/altitudeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                custom:inc="5"
                custom:max="1000"
                custom:min="5"
                custom:title="@string/flight_altitude"
                custom:unit="m" >
            </com.droidplanner.widgets.SeekBarWithText.SeekBarWithText>

            <com.droidplanner.widgets.SeekBarWithText.SeekBarWithText
                android:id="@+id/overlapView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                custom:inc="1"
                custom:max="99"
                custom:min="0"
                custom:title="@string/overlap"
                custom:unit="%" >
            </com.droidplanner.widgets.SeekBarWithText.SeekBarWithText>

            <com.droidplanner.widgets.SeekBarWithText.SeekBarWithText
                android:id="@+id/sidelapView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                custom:inc="1"
                custom:max="99"
                custom:min="0"
                custom:title="@string/sidelap"
                custom:unit="%" >
            </com.droidplanner.widgets.SeekBarWithText.SeekBarWithText>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false" >

        <ToggleButton
            android:id="@+id/surveyModeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/mission_mode"
            android:textOn="@string/polygon_mode" />

        <Button
            android:id="@+id/clearPolyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_polygon" />

        <CheckBox
            android:id="@+id/CheckBoxFootprints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/footprint" />
    </LinearLayout>

</LinearLayout>