<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/menu_flight_modes_spinner"
        android:actionViewClass="org.droidplanner.widgets.spinners.SelectModeSpinner"
        android:showAsAction="always"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/menu_wp_spinner"
        android:actionViewClass="org.droidplanner.widgets.spinners.SelectWaypointSpinner"
        android:showAsAction="always"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/menu_arm"
        android:showAsAction="never"
        android:title="@string/menu_arm">
    </item>
    <item
        android:id="@+id/menu_follow_me"
        android:showAsAction="never"
        android:title="@string/menu_follow_me"/>
    <item
        android:id="@+id/menu_load_from_apm"
        android:showAsAction="never"
        android:title="@string/menu_load_from_apm"/>
    <item android:id="@+id/menu_preflight_checklist" android:title="@string/menu_preflight_checklist" android:showAsAction="never"></item>

</menu>